// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedVaccinationItem Snapshot Tests matches snapshot with default props 1`] = `
<div>
  <div
    class="cds--css-grid"
    data-testid="selected-vaccination-item-grid-entry-1"
  >
    <div
      class="vaccinationTitle cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <span
        data-testid="vaccination-name-entry-1"
      >
        COVID-19 Vaccine
      </span>
    </div>
    <div
      class="vaccinationActions cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper statControl"
      >
        <input
          aria-label="STAT"
          class="cds--checkbox"
          data-testid="vaccination-stat-checkbox-entry-1"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <div
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </div>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
    </div>
    <div
      class="dosageControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item dosageInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Dosage"
              data-testid="vaccination-dosage-input-entry-1"
              id="dosage-unit-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="1"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper dosageUnit"
        data-testid="vaccination-dosage-unit-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hd_-toggle-button"
          id="downshift-_r_hd_-label"
        >
          Dosage unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="dosage-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hd_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Dosage Unit"
            class="cds--list-box__field"
            id="downshift-_r_hd_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hd_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hd_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-frequency-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hf_-toggle-button"
          id="downshift-_r_hf_-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="frequency-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hf_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Frequency"
            class="cds--list-box__field"
            id="downshift-_r_hf_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hf_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hf_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item durationInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Duration"
              data-testid="vaccination-duration-input-entry-1"
              id="duration-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="0"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper durationUnit"
        data-testid="vaccination-duration-unit-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hh_-toggle-button"
          id="downshift-_r_hh_-label"
        >
          Duration unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="duration-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hh_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Duration Unit"
            class="cds--list-box__field"
            id="downshift-_r_hh_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hh_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hh_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-instructions-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hj_-toggle-button"
          id="downshift-_r_hj_-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="vac-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hj_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Vaccination Instructions"
            class="cds--list-box__field"
            id="downshift-_r_hj_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hj_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hj_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-route-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hl_-toggle-button"
          id="downshift-_r_hl_-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="route-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hl_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Route"
            class="cds--list-box__field"
            id="downshift-_r_hl_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hl_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hl_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
        data-testid="vaccination-start-date-picker-entry-1"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  aria-label="Start Date"
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  data-testid="vaccination-start-date-input-entry-1"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="d/m/Y"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerRow cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
    >
      <a
        class="cds--link"
        data-testid="vaccination-add-note-link-entry-1"
        href="#"
      >
        Add Note
      </a>
      <span
        data-testid="vaccination-total-quantity-entry-1"
      >
        Total quantity
         : 
        0
         
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectedVaccinationItem Snapshot Tests matches snapshot with errors 1`] = `
<div>
  <div
    class="cds--css-grid"
    data-testid="selected-vaccination-item-grid-entry-1"
  >
    <div
      class="vaccinationTitle cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <span
        data-testid="vaccination-name-entry-1"
      >
        COVID-19 Vaccine
      </span>
    </div>
    <div
      class="vaccinationActions cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper statControl"
      >
        <input
          aria-label="STAT"
          class="cds--checkbox"
          data-testid="vaccination-stat-checkbox-entry-1"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <div
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </div>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
    </div>
    <div
      class="dosageControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item dosageInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
          data-invalid="true"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-describedby="dosage-unit-entry-1-error-msg"
              aria-invalid="true"
              aria-label="Dosage"
              data-invalid="true"
              data-testid="vaccination-dosage-input-entry-1"
              id="dosage-unit-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="1"
            />
            <svg
              aria-hidden="true"
              class="cds--number__invalid"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              />
              <path
                d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                data-icon-path="inner-path"
                opacity="0"
              />
            </svg>
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
          <div
            class="cds--form-requirement"
            dir="auto"
            id="dosage-unit-entry-1-error-msg"
          >
            Please enter a value
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper dosageUnit"
        data-testid="vaccination-dosage-unit-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hp_-toggle-button"
          id="downshift-_r_hp_-label"
        >
          Dosage unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="dosage-unit-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hp_-menu"
            aria-describedby="dosage-unit-entry-1-error-msg"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Dosage Unit"
            class="cds--list-box__field"
            id="downshift-_r_hp_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hp_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hp_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
          id="dosage-unit-entry-1-error-msg"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-frequency-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hr_-toggle-button"
          id="downshift-_r_hr_-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="frequency-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hr_-menu"
            aria-describedby="frequency-entry-1-error-msg"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Frequency"
            class="cds--list-box__field"
            id="downshift-_r_hr_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hr_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hr_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
          id="frequency-entry-1-error-msg"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item durationInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
          data-invalid="true"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-describedby="duration-entry-1-error-msg"
              aria-invalid="true"
              aria-label="Duration"
              data-invalid="true"
              data-testid="vaccination-duration-input-entry-1"
              id="duration-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="0"
            />
            <svg
              aria-hidden="true"
              class="cds--number__invalid"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              />
              <path
                d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                data-icon-path="inner-path"
                opacity="0"
              />
            </svg>
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
          <div
            class="cds--form-requirement"
            dir="auto"
            id="duration-entry-1-error-msg"
          >
            Please enter a value
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper durationUnit"
        data-testid="vaccination-duration-unit-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_ht_-toggle-button"
          id="downshift-_r_ht_-label"
        >
          Duration unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="duration-unit-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_ht_-menu"
            aria-describedby="duration-unit-entry-1-error-msg"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Duration Unit"
            class="cds--list-box__field"
            id="downshift-_r_ht_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_ht_-label"
            class="cds--list-box__menu"
            id="downshift-_r_ht_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
          id="duration-unit-entry-1-error-msg"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-instructions-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_hv_-toggle-button"
          id="downshift-_r_hv_-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="vac-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_hv_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Vaccination Instructions"
            class="cds--list-box__field"
            id="downshift-_r_hv_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_hv_-label"
            class="cds--list-box__menu"
            id="downshift-_r_hv_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-route-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_i1_-toggle-button"
          id="downshift-_r_i1_-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="route-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_i1_-menu"
            aria-describedby="route-entry-1-error-msg"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Route"
            class="cds--list-box__field"
            id="downshift-_r_i1_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_i1_-label"
            class="cds--list-box__menu"
            id="downshift-_r_i1_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
          id="route-entry-1-error-msg"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
        data-testid="vaccination-start-date-picker-entry-1"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  aria-label="Start Date"
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  data-testid="vaccination-start-date-input-entry-1"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="d/m/Y"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerRow cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
    >
      <a
        class="cds--link"
        data-testid="vaccination-add-note-link-entry-1"
        href="#"
      >
        Add Note
      </a>
      <span
        data-testid="vaccination-total-quantity-entry-1"
      >
        Total quantity
         : 
        0
         
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectedVaccinationItem Snapshot Tests matches snapshot with note visible 1`] = `
<div>
  <div
    class="cds--css-grid"
    data-testid="selected-vaccination-item-grid-entry-1"
  >
    <div
      class="vaccinationTitle cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <span
        data-testid="vaccination-name-entry-1"
      >
        COVID-19 Vaccine
      </span>
    </div>
    <div
      class="vaccinationActions cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper statControl"
      >
        <input
          aria-label="STAT"
          class="cds--checkbox"
          data-testid="vaccination-stat-checkbox-entry-1"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <div
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </div>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
    </div>
    <div
      class="dosageControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item dosageInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Dosage"
              data-testid="vaccination-dosage-input-entry-1"
              id="dosage-unit-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="1"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper dosageUnit"
        data-testid="vaccination-dosage-unit-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_i5_-toggle-button"
          id="downshift-_r_i5_-label"
        >
          Dosage unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="dosage-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_i5_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Dosage Unit"
            class="cds--list-box__field"
            id="downshift-_r_i5_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_i5_-label"
            class="cds--list-box__menu"
            id="downshift-_r_i5_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-frequency-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_i7_-toggle-button"
          id="downshift-_r_i7_-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="frequency-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_i7_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Frequency"
            class="cds--list-box__field"
            id="downshift-_r_i7_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_i7_-label"
            class="cds--list-box__menu"
            id="downshift-_r_i7_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item durationInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Duration"
              data-testid="vaccination-duration-input-entry-1"
              id="duration-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="0"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper durationUnit"
        data-testid="vaccination-duration-unit-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_i9_-toggle-button"
          id="downshift-_r_i9_-label"
        >
          Duration unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="duration-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_i9_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Duration Unit"
            class="cds--list-box__field"
            id="downshift-_r_i9_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_i9_-label"
            class="cds--list-box__menu"
            id="downshift-_r_i9_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-instructions-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_ib_-toggle-button"
          id="downshift-_r_ib_-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="vac-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_ib_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Vaccination Instructions"
            class="cds--list-box__field"
            id="downshift-_r_ib_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_ib_-label"
            class="cds--list-box__menu"
            id="downshift-_r_ib_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
        data-testid="vaccination-route-dropdown-entry-1"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_id_-toggle-button"
          id="downshift-_r_id_-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="route-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_id_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Route"
            class="cds--list-box__field"
            id="downshift-_r_id_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_id_-label"
            class="cds--list-box__menu"
            id="downshift-_r_id_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
        data-testid="vaccination-start-date-picker-entry-1"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  aria-label="Start Date"
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  data-testid="vaccination-start-date-input-entry-1"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="d/m/Y"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerRow cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
    >
      <span
        data-testid="vaccination-total-quantity-entry-1"
      >
        Total quantity
         : 
        0
         
      </span>
    </div>
  </div>
  <div
    class="cds--css-grid"
  >
    <div
      class="_textAreaWCloseContainer_1s7of_1 cds--sm:col-span-8 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--text-area__label-wrapper"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="vaccination-note-entry-1"
          >
            Add Note
          </label>
          <div
            aria-hidden="true"
            class="cds--label cds--text-area__label-counter"
            dir="auto"
          >
            21/1024
          </div>
        </div>
        <span
          class="cds--visually-hidden"
          id="vaccination-note-entry-1-counter-desc"
        >
          Character limit 1024
        </span>
        <div
          class="cds--text-area__wrapper"
        >
          <textarea
            aria-describedby="vaccination-note-entry-1-counter-desc"
            aria-invalid="false"
            aria-readonly="false"
            class="cds--text-area"
            data-testid="vaccination-note-entry-1"
            id="vaccination-note-entry-1"
            maxlength="1024"
            placeholder="Add notes for the vaccination"
            rows="4"
            style="width: 100%;"
            type="default"
          >
            Patient has allergies
          </textarea>
          <span
            aria-atomic="true"
            aria-live="assertive"
            class="cds--text-area__counter-alert"
            role="alert"
          />
        </div>
        <div
          class="cds--form__helper-text"
          dir="auto"
          id="text-area-helper-text-id-_r_if_"
        />
      </div>
      <div
        class="_closeButton_1s7of_29 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-label="Close Selected Item"
              aria-labelledby="tooltip-_r_ih_"
              class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
              data-testid="vaccination-note-entry-1-close-button"
              id="vaccination-note-entry-1-close-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_ih_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
